fixed case when comment for commit was less than column title and Last Change would wrap

--- a/htdocs/css/style.css
+++ b/htdocs/css/style.css
@@ -158,3 +158,5 @@ body {
 	color: #888;
 	white-space: nowrap;
 }
+
+#content.browser table.dirlist tr th {white-space: nowrap;}
